# ParallelAC-xmp

./: 1K4C.alc  AlphaComplexLargeData.cu  AlphaComplexParallel.cu  CMakeLists.txt  README.md  int_float.h  predicates.h  timer.h
CMake/Modules/: FindGMP.cmake
cgbn/: impl_cuda.cu  impl_mpz.cc  xmp_float.h
data/: 1grm.crd  1k4c.crd
output_files/: 1grm_pAC_LD_alpha1.txt  1grm_pAC_alpha1.txt  1k4c_pAC_alpha1.txt
